--- a/css/header.css
+++ b/css/header.css
@@ -6,6 +6,7 @@
     border-style: solid;
     border-color: rgb(121, 118, 118);
     margin: auto;
+    margin-bottom: 35px;
     font-size: 25px;
     font-family: "Lato", sans-serif;
     text-align: center;
@@ -15,9 +16,24 @@
 .header {
     margin: 0 auto;
 }
- 
+.header__imageContainer {
+    overflow-x: auto;
+    max-width: 100%;
+    margin: 0 auto;
+    display: block;
+    border-radius: 12px;
+    margin-bottom: 10px;
+    box-shadow: 5px 5px 18px 3px #515151;
+}
+
 .header__image {
     border-color: #3d3d3d;
     border-radius: 12px;
     text-align: center;
+}
+
+.header__button {
+    text-align: center;
+    margin: 0 auto;
+    display: block;
 }
