--- a/css/style.css
+++ b/css/style.css
@@ -19,36 +19,12 @@ html {
     line-height: 1.5;
 }
 
-.section {
-    border-style: solid;
-    border-width: 1px 0 1px 0;
-    border-color: #848a83;
-    color: #3d3d3d;
-    font-family: 'Lato', sans-serif;
-    font-weight: 400;
-    font-size: 30px;
-    font-style: italic;
-    padding: 5px;
-
-}
-
 .text {
     text-align: justify;
 }
 
-.subSection {
-    color: #3d3d3d;
-    font-style: italic;
-}
-
-.subSubSection {
-    color: #927c35;
-    font-style: italic;
-}
-
-
 .button {
-    margin: 0 auto;
+    margin: auto 0;
 }
 
 .dark {
