--- a/css/table.css
+++ b/css/table.css
@@ -3,7 +3,9 @@
     border-color: #585858;
     border-style: solid;
     border-width: 3px;
-    margin: auto;
+    margin: 0 auto;
+    box-shadow: 3px 3px 15px 3px #515151;
+    border-radius: 5px;
 }
 
 .table__caption {
