--- a/css/header.css
+++ b/css/header.css
@@ -27,7 +27,7 @@
 .header__image {
     border-color: #3d3d3d;
     border-radius: 12px;
-    box-shadow: 3px 3px 15px 3px #515151;
+    box-shadow: 3px 3px 5px 3px #838383;
 }
 
 .header__button {
@@ -36,21 +36,18 @@
     display: block;
 }
 
-.subHeader__imageContainer {
+.section__imageContainer {
     overflow-x: auto;
     margin: 0 auto;
     display: block;
     border-radius: 12px;
     text-align: center;
-    padding: 25px;
-}
+    padding: 5px; 
+ }
 
-.subHeader__image {
+.section__image {
     border-color: #3d3d3d;
     max-width: 100%;
     border-radius: 12px;
-    box-shadow: 3px 3px 15px 3px #515151;
-    
-     
-
+    box-shadow: 3px 3px 5px 3px #838383;
 }
