--- a/css/table.css
+++ b/css/table.css
@@ -4,7 +4,7 @@
     border-style: solid;
     border-width: 3px;
     margin: 0 auto;
-    box-shadow: 3px 3px 15px 3px #515151;
+    box-shadow: 3px 3px 5px 3px #838383;
     border-radius: 5px;
 }
 
@@ -16,11 +16,11 @@
 }
 
 .table__row:nth-child(even) {
-    background-color: rgb(180, 180, 180);
+    background-color: rgb(194, 194, 194);
 }
 
 .table__row:hover {
-    background-color: #a8c1ff;
+    background-color: #7c94d1;
 }
 
 .table__cell--header {
